image_registry/image_registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: image-registry
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
