image_registry/image_registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: image-registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5G"  # allow large image uploads
spec:
  ingressClassName: nginx
  rules:
  - host: registry.kube.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 5000
